Modified about page

--- a/about.html
+++ b/about.html
@@ -49,15 +49,15 @@
                 <a
                   href="mailto:aryavratcd@gmail.com"
                   class="text-white text-decoration-none"
-                  >aryavratcd@gmail.com</a
+                  >dr.vaibhav@gmail.com</a
                 >
               </div>
               <div class="d-flex align-items-center gap-2">
                 <i class="fas fa-phone text-white"></i>
                 <a
-                  href="tel:+91-7633940407"
+                  href="tel:+91-7487935974"
                   class="text-white text-decoration-none"
-                  >+91-7633940407</a
+                  >+91-7487935974</a
                 >
               </div>
             </div>
@@ -84,7 +84,9 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h1 class="h1 fw-bold text-secondary">Dr.</h1>
+          <h1 class="h1 fw-bold text-secondary text-danger">
+            Dr. Vaibhav Shankar
+          </h1>
         </a>
         <button
           class="navbar-toggler"
@@ -143,7 +145,7 @@
         <div class="row">
           <div class="col-12 text-center">
             <h2 data-aos="fade-down" class="text-white display-4 fw-bold mb-3">
-              About Us
+              Dr. Vaibhav Shankar
             </h2>
             <nav aria-label="breadcrumb">
               <ol data-aos="fade-up" class="breadcrumb justify-content-center">
@@ -166,33 +168,31 @@
     <!-- Main Section -->
     <main>
       <!-- About Section -->
-      <section class="my-4">
+      <section class="my-5">
         <div class="container">
-          <div class="row">
-            <div class="col-md-7">
-              <span class="fw-bold fs-4 text-info">About</span>
-              <h2 class="display-5 fw-bold">Dr. Ashish Agarwal</h2>
-              <p class="text-secondary my-2">
-                Dr. Ashish Agarwal, A notable name in Delhi's Cardiology scene.
-                He is the Director and Senior Consultant Cardiologist at AKASH
-                SUPER SPECIALITY HOSPITAL, Dwarka, New Delhi, India. He is
-                highly skilled to handle complex cardiac cases and their
-                management.
+          <div class="row g-4">
+            <div class="col-md-7 order-2 order-md-1">
+              <span
+                class="fw-bold fs-4 text-info border-start border-3 border-danger ps-2"
+                >About</span
+              >
+              <h2 class="display-5 fw-bold">Dr. Vaibhav Shankar</h2>
+              <p class="text-secondary my-2 lead">
+                Dr.Vaibhav is a renowned, highly accomplished Pulmonologist with
+                more than 12+ years of experience in his field. Dr. Vaibhav has
+                pursued his DNB course from one of the most advanced and state
+                of art Indraprastha Apollo Hospital, New Delhi.
               </p>
-              <p class="text-secondary">
-                He is well-known among his patients and their peers for his
-                outstanding care and empathetic approach.
+              <p class="text-secondary lead">
+                There after he pursued his senior residentship from Maulana Azad
+                Medical College and LNJP Hospital. He was worked in other
+                prestigious hospital like Fortis Hospital, Noida. He has
+                participated in a member of live workshops on interventional
+                pulmonology and sleep medicines.
               </p>
-              <p class="text-secondary my-2">
-                Owing to his expertise he is currently the Director and HOD of
-                the Cardiology department at Akash Hospital.
-              </p>
-              <p class="text-secondary my-2">
-                Dr. Ashish Agarwal is an alumnus of renowned institutions in
-                India. He has wide experience of over 15 years and has treated
-                both in-patient and emergency cases skillfully. He is associated
-                with over 21 National and International publications owing to
-                his capability as an adept cardiologist.
+              <p class="text-secondary my-2 lead">
+                With over a decade of dedicated service in cardiology and his
+                exceptional expertise in treating complex cardiac conditions
               </p>
               <div class="row g-4 my-3">
                 <div class="col-md-6">
@@ -201,7 +201,7 @@
                     class="about-card about-card1 d-flex flex-column align-items-center gap-3"
                   >
                     <i class="fa-solid fa-star display-3"></i>
-                    <p class="fw-bold fs-4">15 Years Experience</p>
+                    <p class="fw-bold fs-4">12 Years Experience</p>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -215,60 +215,93 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 order-1 order-md-2">
               <img
                 data-aos="fade-left"
-                src="/image/about2.png"
+                src="/image/dr.vaibhav2.jpg"
                 alt="doctor_img"
-                class="img-fluid"
-                style="height: 500px"
+                class="img-fluid rounded-3"
               />
+              <div
+                class="d-flex flex-column gap-3 align-items-center bg-white p-2 rounded-3 shadow-lg mt-2"
+              >
+                <h2 class="display-6 fw-bold text-info">Dr. Vaibhav Shankar</h2>
+                <ul
+                  class="d-flex align-items-center flex-wrap justify-content-center gap-3"
+                >
+                  <li class="badge text-white bg-danger py-2 px-3">MBBS</li>
+                  <li class="badge text-white bg-danger py-2 px-3">
+                    DNB (Pulmonary Medicine)
+                  </li>
+                  <li class="badge text-white bg-danger py-2 px-3">
+                    Sleep Medicine Expert
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
       <!-- Content Section -->
-      <section>
+      <section class="experience-section py-5 bg-light">
         <div class="container">
-          <p class="mb-4 text-secondary fw-light">
-            This enabled him to attain the coveted CESR, Trauma & Orth, UK. He
-            has also completed European Board Fellowship in Orthopaedics, FEBOT,
-            Berlin, Germany. Dr Das has a passion for Cartilage and Joint
-            preservation and management of sports injuries. He has trained
-            alongside some of the best surgeons across the globe in Keyhole/
-            Arthroscopic surgery of knee, shoulder, elbow and ankle joints. He
-            has tremendous expertise in Arthroscopy and Sports Medicine which
-            includes high end shoulder and Knee arthroscopy viz capsular
-            release, labral repair, rotator cuff repair, ACL & PCL
-            Reconstruction, meniscus repair and microfracture. He is a one stop
-            solution for sports injury including Arthroscopy of elbow and ankle.
-          </p>
-          <p class="mb-2 text-secondary fw-light">
-            He has over 15 years of experience in Joint replacement surgery. Dr
-            Das has comprehensive expertise in Anatomic Total or Reverse
-            Geometry shoulder replacement, Total Elbow Replacement, partial and
-            total knee replacement, cemented and uncemented hip replacement
-            surgery. Where primary/initial knee, shoulder and hip joint
-            replacements have failed, he can provide patient customised
-            treatment in the form of revision joint replacement. Dr Das is
-            proficient in all aspects of trauma management which includes
-            periprothetic fractures (fractures around joint replacement),
-            polytrauma, complex & periarticular fracture. Dr Das has been
-            actively involved in Orthopaedic Research. He has published
-            extensively with more than 10 articles in peer reviewed high impact
-            indexed national and international journals. He is Editor of
-            Asteroid Journal of Orthopaedic Research and Reviewer for Journal of
-            Clinical Orthopaedics and Trauma and BMC Musculoskeletal Disorders.
-            In order to improve patient care and safety, he has been actively
-            involved in Clinical Audits. He is a leading Orthopaedic Surgeon
-            with a vision to provide top quality treatment and patient care at
-            par with western countries at affordable prices.
-          </p>
+          <div class="section-header text-center mb-5">
+            <span class="subtitle text-primary fw-semibold mb-2 d-block">Our Expertise</span>
+            <h2 class="display-6 fw-bold position-relative">
+              Professional Experience & Expertise
+              <span class="header-line"></span>
+            </h2>
+          </div>
+
+          <div class="row g-4">
+            <div class="col-lg-6">
+              <div class="experience-card p-4 bg-white rounded-3 shadow-sm h-100" data-aos="fade-right">
+                <div class="card-icon mb-4">
+                  <i class="fas fa-user-md text-primary display-5"></i>
+                </div>
+                <h3 class="h4 mb-3 text-dark">Expert Pulmonologist</h3>
+                <p class="text-secondary fw-light lead">
+                  Dr. Vaibhav Shankar has established himself as a leading pulmonologist with expertise in treating complex respiratory conditions. He has completed advanced training in Interventional Pulmonology and Sleep Medicine from prestigious institutions. His specialized focus includes management of critical respiratory conditions, bronchoscopy procedures, and sleep disorders.
+                </p>
+                <ul class="list-unstyled mt-4">
+                  <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i> Advanced Bronchoscopy Procedures</li>
+                  <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i> Sleep Medicine Specialist</li>
+                  <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i> Critical Respiratory Care</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-lg-6">
+              <div class="experience-card p-4 bg-white rounded-3 shadow-sm h-100" data-aos="fade-left">
+                <div class="card-icon mb-4">
+                  <i class="fas fa-stethoscope text-primary display-5"></i>
+                </div>
+                <h3 class="h4 mb-3 text-dark">Comprehensive Care</h3>
+                <p class="text-secondary fw-light lead">
+                  With over 12 years of dedicated experience, Dr. Shankar has comprehensive expertise in managing both acute and chronic respiratory conditions. His approach combines the latest medical technologies with personalized patient care.
+                </p>
+                <div class="expertise-stats mt-4">
+                  <div class="row g-3">
+                    <div class="col-6">
+                      <div class="stat-item text-center p-3 border rounded">
+                        <h4 class="h2 text-primary mb-0">12+</h4>
+                        <p class="mb-0">Years Experience</p>
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="stat-item text-center p-3 border rounded">
+                        <h4 class="h2 text-primary mb-0">1000+</h4>
+                        <p class="mb-0">Patients Treated</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-
-      <!-- Accordians Section -->
       <!-- Achievements Section -->
       <section class="py-5">
         <div class="container">
@@ -297,33 +330,11 @@
               >
                 <div class="accordion-body">
                   <ul class="list-unstyled">
+                    <li class="mb-3">MBBS</li>
                     <li class="mb-3">
-                      FRCS Trauma & Orth, England - Intercollegiate, Royal
-                      College of Surgeons of England (2018)
+                      DNB (Pulmonary Medicine) from Indraprastha Apollo Hospital
                     </li>
-                    <li class="mb-3">
-                      FEBOT Trauma & Orth, Germany - Fellowship of European
-                      Board of Trauma & Orthpaedics, Berlin, Germany (2018)
-                    </li>
-                    <li class="mb-3">
-                      MCh Trauma & Orth, UK - Edgehill University, Lancashire,
-                      UK (2016)
-                    </li>
-                    <li class="mb-3">
-                      MRCS, Glasgow - Intercollegiate, Royal college of
-                      Physician and Surgeons of Glasgow, UK (2013)
-                    </li>
-                    <li class="mb-3">
-                      DNB Orthopaedics, India - Govt of India (2010)
-                    </li>
-                    <li class="mb-3">
-                      MS Orthopaedics, Mumbai - Lokmanya Tilak Municipal Medical
-                      College, Sion, Mumbai (2009)
-                    </li>
-                    <li>
-                      MBBS PMCH, Patna - Patna Medical College & Hospital, Patna
-                      (1999)
-                    </li>
+                    <li class="mb-3">Sleep Medicine Expert</li>
                   </ul>
                 </div>
               </div>
@@ -348,33 +359,12 @@
               >
                 <div class="accordion-body">
                   <ul class="list-unstyled">
-                    <li class="mb-3">
-                      FRCS Trauma & Orth, England - Intercollegiate, Royal
-                      College of Surgeons of England (2018)
-                    </li>
-                    <li class="mb-3">
-                      FEBOT Trauma & Orth, Germany - Fellowship of European
-                      Board of Trauma & Orthpaedics, Berlin, Germany (2018)
-                    </li>
-                    <li class="mb-3">
-                      MCh Trauma & Orth, UK - Edgehill University, Lancashire,
-                      UK (2016)
-                    </li>
-                    <li class="mb-3">
-                      MRCS, Glasgow - Intercollegiate, Royal college of
-                      Physician and Surgeons of Glasgow, UK (2013)
-                    </li>
-                    <li class="mb-3">
-                      DNB Orthopaedics, India - Govt of India (2010)
-                    </li>
-                    <li class="mb-3">
-                      MS Orthopaedics, Mumbai - Lokmanya Tilak Municipal Medical
-                      College, Sion, Mumbai (2009)
-                    </li>
-                    <li>
-                      MBBS PMCH, Patna - Patna Medical College & Hospital, Patna
-                      (1999)
-                    </li>
+                    <li class="mb-3">Allergy</li>
+                    <li class="mb-3">ILD</li>
+                    <li class="mb-3">COPD</li>
+                    <li class="mb-3">Asthma</li>
+                    <li class="mb-3">Pleural Effusion</li>
+                    <li class="mb-3">OSAC Sleep Snoring</li>
                   </ul>
                 </div>
               </div>
@@ -484,6 +474,28 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- CTA Section -->
+      <section
+        class="my-4 cta-section d-flex align-items-center justify-content-center"
+      >
+        <div
+          class="container d-flex flex-column align-items-center justify-content-center gap-3"
+        >
+          <p class="fs-1 text-white fw-bold">
+            Feeling Unwell? Consult your problem with us.
+          </p>
+          <p class="text-light">
+            Reach out to us today, and our committed team will help you with all
+            your healthcare requirements.
+          </p>
+          <a href="#">
+            <button class="btn btn-danger btn-lg">
+              <i class="fa-solid fa-phone pe-2"></i> Call Now
+            </button>
+          </a>
         </div>
       </section>
     </main>
