--- a/about.html
+++ b/about.html
@@ -247,7 +247,9 @@
       <section class="experience-section py-5 bg-light">
         <div class="container">
           <div class="section-header text-center mb-5">
-            <span class="subtitle text-primary fw-semibold mb-2 d-block">Our Expertise</span>
+            <span class="subtitle text-primary fw-semibold mb-2 d-block"
+              >Our Expertise</span
+            >
             <h2 class="display-6 fw-bold position-relative">
               Professional Experience & Expertise
               <span class="header-line"></span>
@@ -256,30 +258,54 @@
 
           <div class="row g-4">
             <div class="col-lg-6">
-              <div class="experience-card p-4 bg-white rounded-3 shadow-sm h-100" data-aos="fade-right">
+              <div
+                class="experience-card p-4 bg-white rounded-3 shadow-sm h-100"
+                data-aos="fade-right"
+              >
                 <div class="card-icon mb-4">
                   <i class="fas fa-user-md text-primary display-5"></i>
                 </div>
                 <h3 class="h4 mb-3 text-dark">Expert Pulmonologist</h3>
                 <p class="text-secondary fw-light lead">
-                  Dr. Vaibhav Shankar has established himself as a leading pulmonologist with expertise in treating complex respiratory conditions. He has completed advanced training in Interventional Pulmonology and Sleep Medicine from prestigious institutions. His specialized focus includes management of critical respiratory conditions, bronchoscopy procedures, and sleep disorders.
+                  Dr. Vaibhav Shankar has established himself as a leading
+                  pulmonologist with expertise in treating complex respiratory
+                  conditions. He has completed advanced training in
+                  Interventional Pulmonology and Sleep Medicine from prestigious
+                  institutions. His specialized focus includes management of
+                  critical respiratory conditions, bronchoscopy procedures, and
+                  sleep disorders.
                 </p>
                 <ul class="list-unstyled mt-4">
-                  <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i> Advanced Bronchoscopy Procedures</li>
-                  <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i> Sleep Medicine Specialist</li>
-                  <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i> Critical Respiratory Care</li>
+                  <li class="mb-2">
+                    <i class="fas fa-check-circle text-primary me-2"></i>
+                    Advanced Bronchoscopy Procedures
+                  </li>
+                  <li class="mb-2">
+                    <i class="fas fa-check-circle text-primary me-2"></i> Sleep
+                    Medicine Specialist
+                  </li>
+                  <li class="mb-2">
+                    <i class="fas fa-check-circle text-primary me-2"></i>
+                    Critical Respiratory Care
+                  </li>
                 </ul>
               </div>
             </div>
 
             <div class="col-lg-6">
-              <div class="experience-card p-4 bg-white rounded-3 shadow-sm h-100" data-aos="fade-left">
+              <div
+                class="experience-card p-4 bg-white rounded-3 shadow-sm h-100"
+                data-aos="fade-left"
+              >
                 <div class="card-icon mb-4">
                   <i class="fas fa-stethoscope text-primary display-5"></i>
                 </div>
                 <h3 class="h4 mb-3 text-dark">Comprehensive Care</h3>
                 <p class="text-secondary fw-light lead">
-                  With over 12 years of dedicated experience, Dr. Shankar has comprehensive expertise in managing both acute and chronic respiratory conditions. His approach combines the latest medical technologies with personalized patient care.
+                  With over 12 years of dedicated experience, Dr. Shankar has
+                  comprehensive expertise in managing both acute and chronic
+                  respiratory conditions. His approach combines the latest
+                  medical technologies with personalized patient care.
                 </p>
                 <div class="expertise-stats mt-4">
                   <div class="row g-3">
@@ -307,6 +333,7 @@
         <div class="container">
           <h2 class="display-6 fw-bold mb-4 text-center">
             Achievements and Contribution
+            <span class="header-line"></span>
           </h2>
 
           <div class="accordion" id="achievementsAccordion">
@@ -502,14 +529,14 @@
 
     <!-- Footer -->
     <footer class="footer-section">
-      <div class="container">
+      <div class="container text-center text-lg-start">
         <div class="row gy-4">
           <div class="col-lg-3">
             <div class="footer-widget">
               <h2 class="h4 mb-4 text-primary fw-bold">Quick Links</h2>
               <ul class="list-unstyled footer-links">
                 <li>
-                  <a href=""><i class="fas fa-chevron-right me-2"></i>Home</a>
+                  <a href="/"><i class="fas fa-chevron-right me-2"></i>Home</a>
                 </li>
                 <li>
                   <a href="about.html"
@@ -550,27 +577,33 @@
             <div class="footer-widget">
               <h2 class="h4 mb-4 text-primary fw-bold">Get In Touch</h2>
               <div class="contact-info">
-                <div class="d-flex align-items-start gap-3 mb-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-location-dot"></i>
                   </div>
                   <p class="mb-0">Dr. Vaibhav Shankar</p>
                 </div>
-                <div class="d-flex align-items-start gap-3 mb-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-phone"></i>
                   </div>
                   <p class="mb-0">
-                    <a href="tel:+91-7633940407">+91-7633940407</a>
+                    <a href="tel:+91-7487935974">+91-7487935974</a>
                   </p>
                 </div>
-                <div class="d-flex align-items-start gap-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-envelope"></i>
                   </div>
                   <p class="mb-0">
                     <a href="mailto:aryavratcd@gmail.com"
-                      >aryavratcd@gmail.com</a
+                      >dr.vaibhav@gmail.com</a
                     >
                   </p>
                 </div>
@@ -584,7 +617,9 @@
                 Stay connected with us on social media for updates, health tips,
                 and more.
               </p>
-              <div class="social-links">
+              <div
+                class="social-links justify-content-center justify-content-lg-start"
+              >
                 <a href="#" class="social-icon"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
