--- a/services.html
+++ b/services.html
@@ -46,15 +46,15 @@
                 <a
                   href="mailto:aryavratcd@gmail.com"
                   class="text-white text-decoration-none"
-                  >aryavratcd@gmail.com</a
+                  >dr.vaibhav@gmail.com</a
                 >
               </div>
               <div class="d-flex align-items-center gap-2">
                 <i class="fas fa-phone text-white"></i>
                 <a
-                  href="tel:+91-7633940407"
+                  href="tel:+91-7487935974"
                   class="text-white text-decoration-none"
-                  >+91-7633940407</a
+                  >+91-7487935974</a
                 >
               </div>
             </div>
@@ -81,7 +81,9 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h1 class="h1 fw-bold text-secondary">Dr.</h1>
+          <h1 class="h1 fw-bold text-secondary text-danger">
+            Dr. Vaibhav Shankar
+          </h1>
         </a>
         <button
           class="navbar-toggler"
@@ -162,21 +164,21 @@
     <main>
       <section class="my-4">
         <div class="container">
-          <p class="fs-6 text-info fw-semibold text-center">Services</p>
+          <p class="fs-4 text-info fw-semibold text-center">Services</p>
           <h2 class="fs-1 fw-bold text-center">Excellent Heartcare Services</h2>
 
-          <div class="row gx-5 gy-4 my-3">
+          <div class="row g-4 my-3">
             <div class="col-md-4">
-              <div class="service-card bg-light p-4 text-center h-100">
+              <div class="service-card bg-light text-center h-100">
                 <div class="service-img-wrapper mb-4">
                   <img
                     src="./image/approach-1.jpeg"
                     alt="Coronary Angiography"
-                    class="img-fluid rounded-circle"
+                    class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3">Coronary Angiography</h3>
-                <p class="text-secondary mb-4">
+                <h3 class="fs-4 mb-3 fw-semibold">Coronary Angiography</h3>
+                <p class="text-secondary mb-4 p-2">
                   Angiography is a medical imaging technique that is used to
                   visualize the inside of arteries..
                 </p>
@@ -187,16 +189,16 @@
             </div>
 
             <div class="col-md-4">
-              <div class="service-card bg-light p-4 text-center h-100">
+              <div class="service-card bg-light text-center h-100">
                 <div class="service-img-wrapper mb-4">
                   <img
                     src="./image/approach-2.jpeg"
                     alt="Peripheral Angioplasty"
-                    class="img-fluid rounded-circle"
+                    class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3">Peripheral Angioplasty</h3>
-                <p class="text-secondary mb-4">
+                <h3 class="fs-4 mb-3 fw-semibold">Peripheral Angioplasty</h3>
+                <p class="text-secondary mb-4 p-2">
                   Peripheral artery disease,alsoreferred to as peripheral
                   arterial disease.
                 </p>
@@ -206,16 +208,16 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="service-card bg-light p-4 text-center h-100">
+              <div class="service-card bg-light text-center h-100">
                 <div class="service-img-wrapper mb-4">
                   <img
                     src="./image/approach-3.jpeg"
                     alt="Peripheral Angioplasty"
-                    class="img-fluid rounded-circle"
+                    class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3">Cardiac Catheterization</h3>
-                <p class="text-secondary mb-4">
+                <h3 class="fs-4 mb-3 fw-semibold">Cardiac Catheterization</h3>
+                <p class="text-secondary mb-4 p-2">
                   Cardiac catheterization (kath-uh- tur-ih-ZAY-shun) is a
                   procedure used to diagnose and treat cardiova
                 </p>
@@ -226,16 +228,16 @@
             </div>
             <!-- Continue with other service cards following the same pattern -->
             <div class="col-md-4">
-              <div class="service-card bg-light p-4 text-center h-100">
+              <div class="service-card bg-light text-center h-100">
                 <div class="service-img-wrapper mb-4">
                   <img
                     src="./image/approach-3.jpeg"
                     alt="Peripheral Angioplasty"
-                    class="img-fluid rounded-circle"
+                    class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3">Electrophysiology</h3>
-                <p class="text-secondary mb-4">
+                <h3 class="fs-4 mb-3 fw-semibold">Electrophysiology</h3>
+                <p class="text-secondary mb-4 p-2">
                   Coronary bypass surgery is a procedure that restores blood
                   flow to your heart muscle by diverting the
                 </p>
@@ -245,16 +247,16 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="service-card bg-light p-4 text-center h-100">
+              <div class="service-card bg-light text-center h-100">
                 <div class="service-img-wrapper mb-4">
                   <img
                     src="./image/approach-3.jpeg"
                     alt="Peripheral Angioplasty"
-                    class="img-fluid rounded-circle"
+                    class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3">CPacemaker Implantation</h3>
-                <p class="text-secondary mb-4">
+                <h3 class="fs-4 mb-3 fw-semibold">CPacemaker Implantation</h3>
+                <p class="text-secondary mb-4 p-2">
                   The purpose of your heart is to pump blood to the organs and
                   tissues of your body that need the oxyg
                 </p>
@@ -264,16 +266,18 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="service-card bg-light p-4 text-center h-100">
+              <div class="service-card bg-light text-center h-100">
                 <div class="service-img-wrapper mb-4">
                   <img
                     src="./image/approach-3.jpeg"
                     alt="Peripheral Angioplasty"
-                    class="img-fluid rounded-circle"
+                    class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3">Balloon Mitral Valvuloplasty</h3>
-                <p class="text-secondary mb-4">
+                <h3 class="fs-4 mb-3 fw-semibold">
+                  Balloon Mitral Valvuloplasty
+                </h3>
+                <p class="text-secondary mb-4 p-2">
                   Percutaneous balloon mitral valvuloplasty (BMV) is an
                   effective and safe method in treating rheumati
                 </p>
@@ -289,7 +293,7 @@
 
     <!-- Footer -->
     <footer class="footer-section">
-      <div class="container">
+      <div class="container text-center text-lg-start">
         <div class="row gy-4">
           <div class="col-lg-3">
             <div class="footer-widget">
@@ -337,27 +341,33 @@
             <div class="footer-widget">
               <h2 class="h4 mb-4 text-primary fw-bold">Get In Touch</h2>
               <div class="contact-info">
-                <div class="d-flex align-items-start gap-3 mb-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-location-dot"></i>
                   </div>
                   <p class="mb-0">Dr. Vaibhav Shankar</p>
                 </div>
-                <div class="d-flex align-items-start gap-3 mb-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-phone"></i>
                   </div>
                   <p class="mb-0">
-                    <a href="tel:+91-7633940407">+91-7633940407</a>
+                    <a href="tel:+91-7487935974">+91-7487935974</a>
                   </p>
                 </div>
-                <div class="d-flex align-items-start gap-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-envelope"></i>
                   </div>
                   <p class="mb-0">
                     <a href="mailto:aryavratcd@gmail.com"
-                      >aryavratcd@gmail.com</a
+                      >dr.vaibhav@gmail.com</a
                     >
                   </p>
                 </div>
@@ -371,7 +381,9 @@
                 Stay connected with us on social media for updates, health tips,
                 and more.
               </p>
-              <div class="social-links">
+              <div
+                class="social-links justify-content-center justify-content-lg-start"
+              >
                 <a href="#" class="social-icon"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
