--- a/service-details.html
+++ b/service-details.html
@@ -7,34 +7,20 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
 
     <!-- FontAwesome icon link -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
+
     <!-- Aos Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-    <!-- Owl Carousel CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-    />
-
     <!-- Link Css -->
     <link rel="stylesheet" href="style.css" />
-    <title>Dr. About Page</title>
+    <title>Service Details - Dr. Vaibhav Shankar</title>
   </head>
   <body>
     <!-- Header -->
@@ -46,7 +32,7 @@
               <div class="d-flex align-items-center gap-2">
                 <i class="fas fa-envelope text-white"></i>
                 <a
-                  href="mailto:aryavratcd@gmail.com"
+                  href="mailto:dr.vaibhav@gmail.com"
                   class="text-white text-decoration-none"
                   >dr.vaibhav@gmail.com</a
                 >
@@ -154,19 +140,24 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <h2 data-aos="fade-down" class="text-white display-4 fw-bold mb-3">
-              Our Gallery
-            </h2>
+            <h2 class="text-white display-4 fw-bold mb-3">Sleep Medicine</h2>
             <nav aria-label="breadcrumb">
-              <ol data-aos="fade-up" class="breadcrumb justify-content-center">
+              <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item">
                   <a href="/" class="text-white text-decoration-none">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                  <a
+                    href="/services.html"
+                    class="text-white text-decoration-none"
+                    >Services</a
+                  >
                 </li>
                 <li
                   class="breadcrumb-item active text-white"
                   aria-current="page"
                 >
-                  Our Gallery
+                  Sleep Medicine
                 </li>
               </ol>
             </nav>
@@ -175,58 +166,172 @@
       </div>
     </section>
 
-    <!-- Main Section -->
+    <!-- Main Content -->
     <main>
-      <!-- Gallery Section -->
-      <div class="container py-5">
-        <!-- BREDA Section -->
-        <div class="mb-5">
-          <h2 data-aos="fade-left" class="display-6 text-center fw-bold mb-4">
-            Latest Medical Procedures & Facilities
-          </h2>
-          <div class="row g-4" id="bredaGallery">
-            <!-- Gallery items will be dynamically added here -->
-          </div>
-        </div>
+      <section class="service-detail-section py-5">
+        <div class="container">
+          <div class="row g-4">
+            <!-- Main Content -->
+            <div class="col-lg-8">
+              <div class="service-content">
+                <img
+                  src="/image/approach-1.jpeg"
+                  alt="Sleep Medicine"
+                  class="img-fluid rounded-3 mb-4"
+                />
+                <h3 class="mb-4">Sleep Medicine & Disorders Treatment</h3>
+                <p class="lead text-secondary mb-4">
+                  Sleep medicine is a medical specialty devoted to the diagnosis
+                  and therapy of sleep disturbances and disorders. Dr. Vaibhav
+                  Shankar specializes in treating various sleep-related
+                  conditions that affect both adults and children.
+                </p>
 
-        <!-- Private Projects Section -->
-        <div>
-          <h2 data-aos="fade-right" class="display-6 text-center fw-bold mb-4">
-            Patient Success Stories
-          </h2>
-          <div class="row g-4" id="privateGallery">
-            <!-- Gallery items will be dynamically added here -->
-          </div>
-        </div>
-      </div>
+                <div class="service-features mb-5">
+                  <h4 class="mb-4">What We Treat</h4>
+                  <div class="row g-4">
+                    <div class="col-md-6">
+                      <div
+                        class="feature-item d-flex align-items-start gap-3 p-3 rounded-3"
+                      >
+                        <div class="feature-icon">
+                          <i class="fas fa-bed text-primary"></i>
+                        </div>
+                        <div>
+                          <h5>Sleep Apnea</h5>
+                          <p class="mb-0">
+                            Diagnosis and treatment of obstructive and central
+                            sleep apnea
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div
+                        class="feature-item d-flex align-items-start gap-3 p-3 rounded-3"
+                      >
+                        <div class="feature-icon">
+                          <i class="fas fa-moon text-primary"></i>
+                        </div>
+                        <div>
+                          <h5>Insomnia</h5>
+                          <p class="mb-0">
+                            Treatment for chronic difficulty falling or staying
+                            asleep
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
-      <!-- Image Modal -->
-      <div class="modal fade" id="imageModal" tabindex="-1">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header border-0">
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-              ></button>
+                <div class="treatment-process mb-5">
+                  <h4 class="mb-4">Our Treatment Process</h4>
+                  <div class="process-timeline">
+                    <div class="timeline-item">
+                      <span class="timeline-number">01</span>
+                      <h5>Initial Consultation</h5>
+                      <p>
+                        Comprehensive evaluation of sleep patterns and medical
+                        history
+                      </p>
+                    </div>
+                    <div class="timeline-item">
+                      <span class="timeline-number">02</span>
+                      <h5>Sleep Study</h5>
+                      <p>
+                        Advanced diagnostic testing to analyze sleep patterns
+                      </p>
+                    </div>
+                    <div class="timeline-item">
+                      <span class="timeline-number">03</span>
+                      <h5>Treatment Plan</h5>
+                      <p>Customized treatment strategy based on diagnosis</p>
+                    </div>
+                    <div class="timeline-item">
+                      <span class="timeline-number">04</span>
+                      <h5>Follow-up Care</h5>
+                      <p>Regular monitoring and adjustment of treatment</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="modal-body">
-              <img
-                src=""
-                id="modalImage"
-                class="img-fluid"
-                alt="Gallery Image"
-              />
+
+            <!-- Sidebar -->
+            <div class="col-lg-4">
+              <div class="service-sidebar">
+                <!-- Other Services -->
+                <div class="widget mb-4">
+                  <h4 class="widget-title">Other Services</h4>
+                  <ul class="service-list">
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-chevron-right"></i> Allergy
+                        Treatment</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-chevron-right"></i> COPD Management</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-chevron-right"></i> Asthma Care</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-chevron-right"></i> Bronchoscopy</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-chevron-right"></i> Lung Cancer
+                        Screening</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+
+                <!-- Contact Card -->
+                <div
+                  class="widget contact-widget p-4 bg-primary text-white rounded-3"
+                >
+                  <h4 class="mb-4">Need Help?</h4>
+                  <p class="mb-4">
+                    Contact us for immediate assistance with your sleep-related
+                    concerns.
+                  </p>
+                  <div class="contact-info mb-4">
+                    <div class="d-flex align-items-center gap-3 mb-3">
+                      <i class="fas fa-phone"></i>
+                      <a href="tel:+91-7487935974" class="text-white"
+                        >+91-7487935974</a
+                      >
+                    </div>
+                    <div class="d-flex align-items-center gap-3">
+                      <i class="fas fa-envelope"></i>
+                      <a href="mailto:dr.vaibhav@gmail.com" class="text-white"
+                        >dr.vaibhav@gmail.com</a
+                      >
+                    </div>
+                  </div>
+                  <a href="/contact.html" class="btn btn-light w-100"
+                    >Book Appointment</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer-section">
-      <div class="container">
+      <div class="container text-center text-lg-start">
         <div class="row gy-4">
           <div class="col-lg-3">
             <div class="footer-widget">
@@ -274,27 +379,33 @@
             <div class="footer-widget">
               <h2 class="h4 mb-4 text-primary fw-bold">Get In Touch</h2>
               <div class="contact-info">
-                <div class="d-flex align-items-start gap-3 mb-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-location-dot"></i>
                   </div>
                   <p class="mb-0">Dr. Vaibhav Shankar</p>
                 </div>
-                <div class="d-flex align-items-start gap-3 mb-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-phone"></i>
                   </div>
                   <p class="mb-0">
-                    <a href="tel:+91-7633940407">+91-7633940407</a>
+                    <a href="tel:+91-7487935974">+91-7487935974</a>
                   </p>
                 </div>
-                <div class="d-flex align-items-start gap-3">
+                <div
+                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3"
+                >
                   <div class="contact-icon">
                     <i class="fas fa-envelope"></i>
                   </div>
                   <p class="mb-0">
                     <a href="mailto:aryavratcd@gmail.com"
-                      >aryavratcd@gmail.com</a
+                      >dr.vaibhav@gmail.com</a
                     >
                   </p>
                 </div>
@@ -308,7 +419,9 @@
                 Stay connected with us on social media for updates, health tips,
                 and more.
               </p>
-              <div class="social-links">
+              <div
+                class="social-links justify-content-center justify-content-lg-start"
+              >
                 <a href="#" class="social-icon"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
@@ -343,32 +456,9 @@
       </div>
     </footer>
 
-    <!-- bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Elfsight Google Reviews | Untitled Google Reviews -->
-    <script
-      src="https://static.elfsight.com/platform/platform.js"
-      async
-    ></script>
-
-    <!-- Aos Animation -->
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        duration: 1000,
-        easing: "ease-in-out",
-      });
-    </script>
-
-    <!-- Owl Carousel -->
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Owl Carousel JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="/index.js"></script>
   </body>
 </html>
